2012-12-22  Per Bothner  <per@bothner.com>

	* pregexp.scm (pregexp-error): Just define as error function.
	(pregexp-match-positions-aux): Remove unreachable constant.

2012-11-18  Per Bothner  <per@bothner.com>

	* testing.scm: Add test-group to list of exported names.

2012-09-11  Helmut Eller  <eller.helmut@gmail.com>

	Fix Savannah bug #15579.
	Handle some complex arglists, in particular #!rest args.
	* syntaxutils.scm (unrewrite-arglist): New function.
	(unrewrite): Use it.

2012-07-10  Per Bothner  <per@bothner.com>

	* Xutils.scm: Moved to gnu/xquery/util.
	* Makefile.am: Update accordingly.

	* Xutils.scm: New file.
	(count-values): New function.
	* Makefile.am: Update accordingly.

2012-07-03  Per Bothner  <per@bothner.com>

	* Makefile.am: Conditionalize gui.scm on WITH_AWT.

2012-03-11  Per Bothner  <per@bothner.com>

	* srfi69.scm (symbol-hash, vector-hash): Remove non-exported
	un-used functions.

	* conditions.scm: Add some missing exports.

	* StreamsPrimitive.scm (stream-force): Moved from here ...
	* StreamsType.scm: ... here, because it is no part of the API
	for streams.primitive.

2012-02-07  Jamison Hope  <jrh@theptrgroup.com>

	* srfi13.scm (let-optionals*): Re-implement to better match reference
	implementation.  This fixes a crash when calling string-contains.

2012-02-05  Per Bothner  <per@bothner.com>

	* enums.scm: Use #, and #,@ instead of , and ,@ in quasisyntax.

2012-01-31  Per Bothner  <per@bothner.com>

	* StreamsType.scm: Rewrite to build on top of
	the new delay/lazy/force primitives.
	* StreamsPrimitive.scm: Mostly re-write.

2011-12-09  Per Bothner  <per@bothner.com>

	* gui.scm (image-width, image-height): Fix typo.
	* Makefile.am (SCM_COMPILE_FLAGS): New flags.

2011-10-29  Per Bothner  <per@bothner.com>

	* readtable.scm (define-reader-ctor): Improve type specifiers
	to avoid compiler warning.

2011-09-24  Jamison Hope  <jrh@theptrgroup.com>

	* srfi14.scm: Update character sets to match Unicode 6 and the